--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link type="text/css" href="/Banana/styles.css" media="all" rel="stylesheet">
+
 <html lang="en">
   <head>
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="banana" />
