--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <li>Improve Gut Health and Digestion. </li>
 <li>Improves Mood and Mental Health.</li>
     </ul>
+    <img src=https://media.npr.org/assets/img/2017/05/19/ap_17139283497751_wide-d3cd64f47cd629272e0c6d0192e0b33dab93a9b4-s1400-c100.jpg>
+    <h2>
+      Chunkey Monkey
+    </h2>  
   </head>
+  
   <body>
   </body>
 </html>
