--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <li>Improves Mood and Mental Health.</li>
     </ul>
     <img src="https://media.npr.org/assets/img/2017/05/19/ap_17139283497751_wide-d3cd64f47cd629272e0c6d0192e0b33dab93a9b4-s1400-c100.jpg" alt="monkey"/>
-    <h2>
-      Chunkey Monkey
-    </h2>  
+    <h1>
+     <a href="https://jebenejellybean.github.io/Monkey/"> Uncle Fat</a>
+  </h1>
   </head>
   
   <body>
